# Berkeley-Humanoid-Lite

./: .gitmodules  LICENCE  README.md  pyproject.toml  requirements.txt
checkpoints/: policy_baseline.onnx  policy_biped.onnx  policy_humanoid.onnx
configs/: policy_baseline.yaml  policy_biped.yaml  policy_humanoid.yaml  policy_humanoid_legs.yaml  policy_latest.yaml
docker/: Dockerfile
scripts/: list_envs.py
scripts/rsl_rl/: play.py  train.py
scripts/sim2sim/: play_mujoco.py
source/berkeley_humanoid_lite/: pyproject.toml  setup.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/: __init__.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/: velocity_env_cfg.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/config/biped/: __init__.py  env_cfg.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/config/biped/agents/: rsl_rl_ppo_cfg.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/config/humanoid/: __init__.py  env_cfg.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/config/humanoid/agents/: rsl_rl_ppo_cfg.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/locomotion/velocity/mdp/: __init__.py  events.py  rewards.py  terminations.py
source/berkeley_humanoid_lite/config/: extension.toml
