[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "berkeley_humanoid_lite"
version = "2025.05.28"
description = "Training environment for Berkeley Humanoid Lite"
authors = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
maintainers = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "isaaclab"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Isaac Sim :: 4.5.0",
]
dependencies = [
    "psutil",
]

[project.urls]
repository = "https://github.com/HybridRobotics/Berkeley-Humanoid-Lite"

[tool.setuptools]
packages = ["berkeley_humanoid_lite"]
zip-safe = false 